syntax = "proto3";

package tgbot.builder.android;

import "google/protobuf/empty.proto";

// Settings for Android ROM builds
message Settings {
    optional bool do_repo_sync = 1;
    optional bool do_clean_build = 2;
    optional bool use_ccache = 3;
    optional bool use_rbe_service = 4;
    optional string rbe_api_token = 5;
}

message CleanDirectoryRequest {
    string directory_path = 1;
}

enum BuildVariant {
    Unspecified = 0;
    User = 1;
    UserDebug = 2;
    Eng = 3;
}

message BuildRequest {
    string config_name = 1;
    string target_device = 2;
    string rom_name = 3;
    string rom_android_version = 4;
    BuildVariant build_variant = 5;
}

message BuildResult {
    bool success = 1;
    string artifact_path = 2;
}

message BuildLogEntry {
    string message = 1;
    int64 timestamp = 2;
    bool is_finished = 3;
}

message BuildAction {
    string build_id = 1; // Used for logs, status, cancellation
}

message BuildSubmission {
    string build_id = 1; 
    bool accepted = 2;
    string status_message = 3;
}

// Service for building Android ROMs
service ROMBuildService {
    // Get or set build settings
    rpc GetSettings(google.protobuf.Empty) returns (Settings);
    rpc SetSettings(Settings) returns (google.protobuf.Empty);

    // Clean a specified directory
    rpc CleanDirectory(CleanDirectoryRequest) returns (google.protobuf.Empty);
    
    // Start a new ROM build.
    rpc StartBuild(BuildRequest) returns (BuildSubmission);

    // Logs streaming for a build in progress
    rpc StreamLogs(BuildAction) returns (stream BuildLogEntry);

    // Cancel a build in progress
    rpc CancelBuild(BuildAction) returns (google.protobuf.Empty);
    rpc GetStatus(BuildAction) returns (BuildSubmission);
}